--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <div class="container">
       <div class="options">
         <div class="limit">
-          <button>Countdown with limit date</button>
+          <button class="limit-button">Countdown with limit date</button>
           <p> <small>
             Countdown with limit date allows you to select the target date, and it will stop when the countdown reaches zero.
           </small></p>
         </div>
         <div class="repeat">
-          <button>Countdown with repeat</button>
+          <button class="repeat-button">Countdown with repeat</button>
           <p> <small>
-            Countdown with repeat, allows you to type the number of days you want to countdown. Once the counter reaches zero, it will start over.
+            Countdown with repeat, allows you to type the number of days you want to countdown. Once the counter reaches zero it will start over.
           </small></p>
         </div>
       </div>
@@ -37,7 +37,7 @@
               00
             </span>
           </div>
-          <span>Días</span>
+          <span>Days</span>
         </div>
         <div class="item">
           <div class="number">
@@ -45,7 +45,7 @@
               00
             </span>
           </div>
-          <span>Horas</span>
+          <span>Hours</span>
         </div>
         <div class="item">
           <div class="number">
@@ -53,7 +53,7 @@
               00
             </span>
           </div>
-          <span>Minutos</span>
+          <span>Minutes</span>
         </div>
         <div class="item">
           <div class="number">
@@ -61,7 +61,7 @@
               00
             </span>
           </div>
-          <span>Segundos</span>
+          <span>Seconds</span>
         </div>
       </div>
     </div>
